--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,14 @@ spring:
     url: jdbc:mysql://localhost:3306/board
     username: root
     password: 1q2w3e4r
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: tig01647@gmail.com
+    password: drguohyuvsnrphbq
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
 
 mybatis:
   mapper-locations:
