--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/board
-    username: root
+    url: jdbc:mysql://db1.civc1qeitjb1.ap-northeast-2.rds.amazonaws.com:3306/board
+    username: admin
     password: 1q2w3e4r
   mail:
     host: smtp.gmail.com
