--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,37 @@ spring:
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            clientId: ccddd912d66c9ef6f6cf325695c6fd81 # REST API key
+            clientSecret: bfbaa1070eee0c156f3b361d67121ff1 # admin key
+            redirectUri: http://localhost:8080/login/oauth2/code/kakao # oauth를 쓸 때 정해져 있는 요청 uri 맨 마지막 부분만 바뀜
+            authorizationGrantType: authorization_code
+            clientAuthenticationMethod: POST
+            clientName: Kakao # 첫 글자는 대문자로
+#            scope: # 가져올 정보
+          naver:
+            clientId: MOD8kJvczAZ3vFXFjhNz # REST API key
+            clientSecret: _TNZNG39Gp # admin key
+            redirectUri: http://localhost:8080/login/oauth2/code/naver # oauth를 쓸 때 정해져 있는 요청 uri 맨 마지막 부분만 바뀜
+            authorizationGrantType: authorization_code
+            clientAuthenticationMethod: POST
+            clientName: Naver
+        # google 이나 fac ebook 같은 글로벌 기업은 기본적으로 표준 값이 잡혀있기 때문에 설정에서 생략이 가능하다!
+        provider:
+          kakao:
+            authorizationUri: https://kauth.kakao.com/oauth/authorize # 인가
+            tokenUri: https://kauth.kakao.com/oauth/token # 토큰
+            userInfoUri: https://kapi.kakao.com/v2/user/me # 사용자 정보 가져오기 ==> oAuth2UserRequest로 들어감
+            userNameAttribute: id # 응답 부분의 사용자 식별 코드?
+          naver:
+            authorizationUri: https://nid.naver.com/oauth2.0/authorize
+            tokenUri: https://nid.naver.com/oauth2.0/token
+            userInfoUri: https://openapi.naver.com/v1/nid/me
+            userNameAttribute: response
 
 mybatis:
   mapper-locations:
